{{$NEXT}}

0.5       2011-06-08 13:04:39 America/Los_Angeles

 * tweak syncdirectives transform to hopefully work on win32

0.4       2011-04-26 14:45:29 America/Los_Angeles

 * fix tests for older perls

0.3       2011-04-21 16:39:27 America/Los_Angeles

 * fixed bug in SyncDirectives (gff3_insert_sync_directives)
   transform, did not work if the file contained trailing tabs.
 * added Bio::GFF3::Transform::FromFasta, which can make gff3 from
   fasta

0.2       2011-03-08 15:43:01 America/New_York

 * squash some warnings in LowLevel.pm
 * add -i (in-place) option to gff3_insert_sync_directives
   command-line script

0.01   2011-02-23 23:45 America/Los_Angeles

 * initial release