@@ -200,7 +200,11 @@ sub gff3_format_attributes {
       my $key = $_;
       my $val = $attr->{$key};
       $val = [ $val ] unless ref $val;
-      "$key=".join( ',', map gff3_escape($_), @$val );
+      if( @$val ) {
+          "$key=".join( ',', map gff3_escape($_), @$val );
+      } else {
+          ()
+      }
     } sort keys %$attr
  );
 
